# gnk_fastasort

./: .gitignore  GCA_964017025.1_reordered.tsv  LICENSE  README.md  hello.fa.fai  iySteCulp1_reordered.tsv  pyproject.toml
.github/workflows/: lint.yml  release.yml
src/gnk_fastasort/: cli.py  fetch_reports.py  generics.py  ncbi_file_organiser.py  sanger_file_organiser.py
src/original/: logic.py
src/test/: iySteCulp1.1.curated.fa.fai
